# pocket-cache

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  coverage.xml  pyproject.toml  requirements-dev.txt  requirements.txt  tox.ini
.github/workflows/: publish.yml  tests.yml
examples/: basic_usage.py
src/pocket_cache/: __init__.py  cache.py
src/pocket_cache/backends/: __init__.py  base.py  filesystem.py
src/pocket_cache/serializers/: json.py
src/pocket_cache/utils/: __init__.py  validation.py
src/quickcache/: __init__.py  cache.py
src/quickcache/backends/: __init__.py  base.py  memory.py
src/quickcache/serializers/: base.py
src/quickcache/utils/: decorators.py  key.py
tests/: conftest.py  test_cache.py  test_cache_edge_cases.py  test_decorators.py
tests/test_backends/: test_filesystem.py  test_filesystem_edge_cases.py  test_memory.py
tests/test_serializers/: test_json.py
tests/test_utils/: test_decorator_edge_cases.py  test_key.py  test_validation.py
