[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pocket-cache"
version = "0.1.0"
description = "A fast and flexible API response caching library"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["cache", "api", "http", "redis", "caching"]
authors = [
    { name = "Jasur Khojiev", email = "jasur.py@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "redis>=4.0.0",
    "msgpack>=1.0.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.20.0",
    "coverage>=7.2.0",
    "fakeredis>=2.0.0",
    "pytest-xdist>=3.0.0",
]
docs = [
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "sphinx-autodoc-typehints>=1.0.0",
]
dev = [
    "black>=22.0.0",
    "isort>=5.0.0",
    "flake8>=4.0.0",
    "mypy>=0.900",
    "pre-commit>=2.0.0",
]
all = [
    "pocket-cache[test,docs,dev]"
]

[project.urls]
Homepage = "https://github.com/jasur-py/pocket-cache"
Documentation = "https://pocket-cache.readthedocs.io/"
Repository = "https://github.com/jasur-py/pocket-cache.git"
Issues = "https://github.com/jasur-py/pocket-cache/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=pocket_cache --cov-report=term-missing --cov-report=xml"
asyncio_mode = "strict"
pythonpath = ["."]

[tool.coverage.run]
source = ["pocket_cache"]
omit = ["tests/*"]
relative_files = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]
show_missing = true

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88